force-app/main/default/objects/QuoteLineItem/fields/AFP_VAL__c.field-meta.xml
<CustomField>
    <fullName>AFP_VAL__c</fullName>
    <formula>AFPpercent__c * Price_With_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFP VAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>