force-app/main/default/objects/QuoteLineItem/fields/AFPpercent__c.field-meta.xml
<CustomField>
    <fullName>AFPpercent__c</fullName>
    <label>AFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>