force-app/main/default/objects/QuoteLineItem/fields/Commissioning_Cost__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Cost__c</fullName>
    <label>Commissioning Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>