force-app/main/default/objects/QuoteLineItem/fields/Electrical_Labour__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Labour__c</fullName>
    <label>Electrical Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>