force-app/main/default/objects/QuoteLineItem/fields/Electrical_Labour_Amount__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Labour_Amount__c</fullName>
    <formula>Electrical_Labour__c *  Electrical_Labour_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical Labour Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>