force-app/main/default/objects/QuoteLineItem/fields/Electrical_Labour_Hours__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Labour_Hours__c</fullName>
    <label>Electrical Labour Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>