force-app/main/default/objects/QuoteLineItem/fields/Engraving_Tags_With_Legend_Plates__c.field-meta.xml
<CustomField>
    <fullName>Engraving_Tags_With_Legend_Plates__c</fullName>
    <label>Engraving Tags With Legend Plates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>