force-app/main/default/objects/QuoteLineItem/fields/Engraving_Tags_With_Legend_Plates_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engraving_Tags_With_Legend_Plates_Hours__c</fullName>
    <label>Engraving Tags With Legend Plates Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>