force-app/main/default/objects/QuoteLineItem/fields/Final_Bundle_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Bundle_Price__c</fullName>
    <formula>Bundle_Price_With_TAX__c +  TPC_VAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bundle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>