force-app/main/default/objects/QuoteLineItem/fields/Final_Bundle_Price_with_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Final_Bundle_Price_with_Quantity__c</fullName>
    <formula>Final_Bundle_Price__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bundle Price with Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>