force-app/main/default/objects/QuoteLineItem/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <defaultValue>22</defaultValue>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>