force-app/main/default/objects/QuoteLineItem/fields/Gross_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Amount__c</fullName>
    <formula>Gross_Margin__c *  Final_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>