force-app/main/default/objects/QuoteLineItem/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <label>Gross Profit %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>