force-app/main/default/objects/QuoteLineItem/fields/Instalation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Instalation_Amount__c</fullName>
    <formula>Instalation_Charges__c *  Instalation_Charges_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>