force-app/main/default/objects/QuoteLineItem/fields/Instalation_Charges_Hours__c.field-meta.xml
<CustomField>
    <fullName>Instalation_Charges_Hours__c</fullName>
    <label>Instalation Charges Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>