force-app/main/default/objects/QuoteLineItem/fields/Operational_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Operational_Cost_Total__c</fullName>
    <formula>Electrical_Labour_Amount__c + Engraving_Tags_With_Legend_Plates_Amount__c + Instalation_Amount__c + Transport_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>