force-app/main/default/objects/QuoteLineItem/fields/PFP_VAL__c.field-meta.xml
<CustomField>
    <fullName>PFP_VAL__c</fullName>
    <formula>PFPPERCENT__c * Price_With_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFP VAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>