force-app/main/default/objects/QuoteLineItem/fields/Price_With_GP__c.field-meta.xml
<CustomField>
    <fullName>Price_With_GP__c</fullName>
    <label>Price With GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>