force-app/main/default/objects/QuoteLineItem/fields/Price_with_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Price_with_Quantity__c</fullName>
    <formula>Quantity *  Final_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price with Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>