force-app/main/default/objects/QuoteLineItem/fields/Price_without_GP__c.field-meta.xml
<CustomField>
    <fullName>Price_without_GP__c</fullName>
    <formula>Final_Price__c + Operational_Cost_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price without GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>