force-app/main/default/objects/QuoteLineItem/fields/Product_History__c.field-meta.xml
<CustomField>
    <fullName>Product_History__c</fullName>
    <label>Product History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>