force-app/main/default/objects/QuoteLineItem/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOM Creation/New Item Add (BN)</fullName>
            </value>
            <value>
                <fullName>Customer Request (CR)</fullName>
            </value>
            <value>
                <fullName>Quotation (QT)</fullName>
            </value>
            <value>
                <fullName>Purchase Order (PO)</fullName>
            </value>
            <value>
                <fullName>Drawing Approval (DA)</fullName>
            </value>
            <value>
                <fullName>Job Raised (JR)</fullName>
            </value>
            <value>
                <fullName>Fabrication (FB)</fullName>
            </value>
            <value>
                <fullName>Powder Coating (PC)</fullName>
            </value>
            <value>
                <fullName>Wiring (WR)</fullName>
            </value>
            <value>
                <fullName>Proforma Invoice (PI)</fullName>
            </value>
            <value>
                <fullName>Invoicing (IV)</fullName>
            </value>
            <value>
                <fullName>Job Finish (JF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>