force-app/main/default/objects/QuoteLineItem/fields/SSLT__c.field-meta.xml
<CustomField>
    <fullName>SSLT__c</fullName>
    <label>SSLT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>