force-app/main/default/objects/QuoteLineItem/fields/TPC_VAL__c.field-meta.xml
<CustomField>
    <fullName>TPC_VAL__c</fullName>
    <formula>TPCpercent__c  * Bundle_Price_With_TAX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPC VAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>